samples/_failures_safe/1761463495_88046f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6942fc61.c: In function ‘main’:
./samples/SAFE/__tmp_6942fc61.c:134:5: error: expected declaration or statement at end of input
  134 |     }
      |     ^
